force-app/main/default/objects/Support__c/Support__c.object-meta.xml
<CustomObject>
    <description>stores ticket details linked to account and contacts for sales and service team to resolve</description>
    <label>Support ticket</label>
    <nameField>
        <displayFormat>TN-{00000}</displayFormat>
        <label>Ticket no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>support tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>