force-app/main/default/objects/Support__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account this ticket is associated with.</description>
    <inlineHelpText>The account this ticket is associated with.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>support tickets</relationshipLabel>
    <relationshipName>support_tickets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>