force-app/main/default/objects/Support__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact of the ticket</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>support tickets</relationshipLabel>
    <relationshipName>support_tickets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>