force-app/main/default/objects/Support__c/fields/Issue_description__c.field-meta.xml
<CustomField>
    <fullName>Issue_description__c</fullName>
    <description>Describe the issue</description>
    <inlineHelpText>Describe the issue</inlineHelpText>
    <label>Issue description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>