force-app/main/default/objects/Support__c/fields/Resolution_notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_notes__c</fullName>
    <description>Describe the resolution provided</description>
    <inlineHelpText>Describe the resolution</inlineHelpText>
    <label>Resolution notes</label>
    <type>TextArea</type>
</CustomField>