force-app/main/default/objects/Support__c/fields/Total_action_items__c.field-meta.xml
<CustomField>
    <fullName>Total_action_items__c</fullName>
    <label>Total action items</label>
    <summaryForeignKey>Support_ticket_action_item__c.Support_ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>