force-app/main/default/objects/Support__c/validationRules/End_date_check.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_check</fullName>
    <active>true</active>
    <description>End date must not be less than Start date</description>
    <errorConditionFormula>End_date__c  &lt;  Start_date__c</errorConditionFormula>
    <errorDisplayField>End_date__c</errorDisplayField>
    <errorMessage>Enter valid date</errorMessage>
</ValidationRule>