force-app/main/default/objects/Support__c/validationRules/Start_date_today_or_later.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_today_or_later</fullName>
    <active>true</active>
    <description>Start date must be today or later</description>
    <errorConditionFormula>Start_date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Start_date__c</errorDisplayField>
    <errorMessage>Enter valid date</errorMessage>
</ValidationRule>